--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Test</title>
 </head>
 <body>
-    <h1>Hello collins</h1>
+    <h1>Hello world, we are software developer!</h1>
 </body>
 </html>
