--- a/surveyForm.html
+++ b/surveyForm.html
@@ -11,7 +11,9 @@
         <h1 id="title">freeCodeCamp Survey Form</h1>
         <p id="description">Thank you for taking the time to help us improve the platform</p>
         <form id="survey-form">
-            
-        </form>
+            <input type="text" id="name">
+            <input type="email" required id="email">
+            <input type="number" id="number">
+        </form >
 </body>
 </html>
