--- a/surveyForm.html
+++ b/surveyForm.html
@@ -5,15 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survey Form</title>
-    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
         <h1 id="title">freeCodeCamp Survey Form</h1>
         <p id="description">Thank you for taking the time to help us improve the platform</p>
         <form id="survey-form">
-            <input type="text" id="name">
-            <input type="email" required id="email">
-            <input type="number" id="number">
+            <label for="#name" id="name-label">Name</label> <input type="text" id="name" required placeholder="Enter Name"><br>
+            <label for="#email" id="email-label">Email</label> <input type="email" required id="email" placeholder="Enter Email"><br>
+            <label for="#number" id="number-label">Age</label> <input type="number" id="number" min="18" max="100" placeholder="Enter number"><br>
+            <label for="#dropdown" id="select-label">Which option best describes your current role?</label> <select id="dropdown" >
+                <option value="0">Student</option>
+                <option value="1">Teacher</option>
+            </select><br>
+            <label for="#radio" id="select-label">Would you recommend freeCodeCamp to a friend?</label><br>
+            <input type="radio" name="name" id="radio" checked value="1">Definitely<br>
+            <input type="radio" name="name" id="radio" value="2"> Sure<br>
+            <label for="#radio" id="select-label">What would you like to see improved? (Check all that apply)</label><br>
+            <input type="checkbox" name="" id="" value="1">Front-end Projects <br>
+            <input type="checkbox" name="" id="" value="2">Back-end Projects <br>
+            <input type="checkbox" name="" id="" value="3"> Other <br>
+            <label for="#text">Any comments or suggestions?</label><br>
+            <textarea name="" id="text" cols="30" rows="10"></textarea><br>
+            <input type="submit" id="submit" value="Submit">
+
+
         </form >
 </body>
 </html>
